--- a/worker/package.json
+++ b/worker/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "nodemon": "1.18.3",
-    "redis": "2.8.0"
+    "redis": "2.8.0",
+    "merge": ">=1.2.1"
   },
   "scripts": {
     "start": "node index.js",
