--- a/worker/package.json
+++ b/worker/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
     "nodemon": "1.18.3",
-    "redis": "2.8.0",
-    "merge": ">=1.2.1"
+    "redis": "2.8.0"
   },
   "scripts": {
     "start": "node index.js",
