--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
   - docker build -t charlesjlamb/multi-worker ./worker
 
 # Log in to the docker CLI
-  - echo '$DOCKER_PASSWORD' | docker login -u '$DOCKER_ID' --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 # PUSH IMAGES TO DOCKER HUB
   - docker push charlesjlamb/multi-client
   - docker push charlesjlamb/multi-nginx
